--- a/src/Dashboards.Sdk/Dashboards.Sdk.csproj
+++ b/src/Dashboards.Sdk/Dashboards.Sdk.csproj
@@ -28,7 +28,7 @@
 		<PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.12.1" />
 		<PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.15.2" />
 		<PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.1" />
-		<PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.5.5" />
+		<PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.5.6" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -37,7 +37,7 @@
 
 	<PropertyGroup>
 		<PackageId>Nexus.Link.Dashboards.Sdk</PackageId>
-		<Version>1.0.5</Version>
+		<Version>1.0.6</Version>
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<PackageTags>nexus;link;fulcrum;lever</PackageTags>
 		<Authors>XLENT Link</Authors>
@@ -47,10 +47,11 @@
 		<Copyright>Copyright ©2022 Xlent Link AB</Copyright>
 		<IncludeSymbols>true</IncludeSymbols>
 		<PackageReleaseNotes>
-      1.0.5 Updated nugets to avoid versions with security risks
-      1.0.4 Bump
-      1.0.1 Url fix
-      1.0.0 Initial release
+			1.0.6 Updated nugets
+			1.0.5 Updated nugets to avoid versions with security risks
+			1.0.4 Bump
+			1.0.1 Url fix
+			1.0.0 Initial release
     </PackageReleaseNotes>
 		<LangVersion>latest</LangVersion>
 	</PropertyGroup>
