--- a/src/Dashboards.Sdk/Dashboards.Sdk.csproj
+++ b/src/Dashboards.Sdk/Dashboards.Sdk.csproj
@@ -24,11 +24,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.1" />
-		<PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.12.1" />
-		<PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.15.2" />
-		<PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.1" />
-		<PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.6.0" />
+		<PackageReference Include="Nexus.Link.Libraries.Core" Version="5.27.0" />
+		<PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.13.1" />
+		<PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.16.0" />
+		<PackageReference Include="Nexus.Link.Libraries.Web" Version="5.34.0" />
+		<PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.6.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -37,7 +37,7 @@
 
 	<PropertyGroup>
 		<PackageId>Nexus.Link.Dashboards.Sdk</PackageId>
-		<Version>1.0.7</Version>
+		<Version>1.0.8</Version>
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<PackageTags>nexus;link;fulcrum;lever</PackageTags>
 		<Authors>XLENT Link</Authors>
@@ -47,8 +47,7 @@
 		<Copyright>Copyright ©2022 Xlent Link AB</Copyright>
 		<IncludeSymbols>true</IncludeSymbols>
 		<PackageReleaseNotes>
-      1.0.7 Updated nugets
-      1.0.6 Updated nugets
+      1.0.8 Bump
       1.0.5 Updated nugets to avoid versions with security risks
       1.0.4 Bump
       1.0.1 Url fix
