--- a/src/DataSyncEngine.Sdk/Nexus.Link.DataSyncEngine.Sdk.csproj
+++ b/src/DataSyncEngine.Sdk/Nexus.Link.DataSyncEngine.Sdk.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <AssemblyName>Nexus.Link.DatasyncEngine.Sdk</AssemblyName>
     <RootNamespace>Nexus.Link.DatasyncEngine.Sdk</RootNamespace>
 
@@ -18,12 +18,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.34.0" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.DatasyncEngine.Sdk</PackageId>
-    <Version>2.0.12</Version>
+    <Version>2.1.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -33,6 +33,7 @@
     <Copyright>Copyright ©2020 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      2.1.0 Dropped support for net461
       2.0.12 Updated nugets to avoid versions with security risks
       2.0.11 Bump
       2.0.2 Symbols
