--- a/test/AsyncCaller.UnitTests/AsyncCaller.Sdk.UnitTests.csproj
+++ b/test/AsyncCaller.UnitTests/AsyncCaller.Sdk.UnitTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net461;net472</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net472</TargetFrameworks>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -11,17 +11,11 @@
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
     <PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.27.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\AsyncCaller.Sdk\Nexus.Link.AsyncCaller.Sdk.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Nexus.Link.Libraries.Core">
-      <HintPath>..\..\..\..\..\Users\Magnus Widerberg\.nuget\packages\nexus.link.libraries.core\3.2.4\lib\net461\Nexus.Link.Libraries.Core.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
