--- a/src/AsyncManager.Sdk/AsyncManager.Sdk.csproj
+++ b/src/AsyncManager.Sdk/AsyncManager.Sdk.csproj
@@ -38,14 +38,14 @@
 
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="4.1.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.27.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.28.1" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.16.0" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.34.0" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.AsyncManager.Sdk</PackageId>
-    <Version>4.0.0</Version>
+    <Version>4.0.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -55,6 +55,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      4.0.1 Bump
       4.0.0 Replaced IRequestService.RetryRequestWithNewAuthenticationAsync with CreateRequestCopyWithNewAuthenticationAsync
       3.3.0 New method in RequestRestClient
       3.2.10 Bump
