--- a/src/AsyncCaller.Sdk/Nexus.Link.AsyncCaller.Sdk.csproj
+++ b/src/AsyncCaller.Sdk/Nexus.Link.AsyncCaller.Sdk.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.34.4" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.0.0-beta01" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.29.4" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
