--- a/src/IdentityAccessManagement.Sdk/IdentityAccessManagement.Sdk.csproj
+++ b/src/IdentityAccessManagement.Sdk/IdentityAccessManagement.Sdk.csproj
@@ -21,7 +21,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.32" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.26.0" />
-		<PackageReference Include="Nexus.Link.Libraries.Web" Version="5.34.4" />
+		<PackageReference Include="Nexus.Link.Libraries.Web" Version="6.0.0-beta01" />
 		<PackageReference Include="IdentityModel" Version="5.1.0" />
 		<PackageReference Include="Nexus.Link.Libraries.Core" Version="5.29.4" />
 	</ItemGroup>
