--- a/src/Misc.AspNet.Sdk/Misc.AspNet.Sdk.csproj
+++ b/src/Misc.AspNet.Sdk/Misc.AspNet.Sdk.csproj
@@ -35,7 +35,7 @@
     <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="4.1.1" />
     <PackageReference Include="Nexus.Link.Contracts.Misc.AspNet.Sdk" Version="1.0.12" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.29.4" />
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.4.6" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.4.7-beta01" />
   </ItemGroup>
 
   <PropertyGroup>
