--- a/src/WorkflowEngine.Sdk.Abstract/WorkflowEngine.Sdk.Abstract.csproj
+++ b/src/WorkflowEngine.Sdk.Abstract/WorkflowEngine.Sdk.Abstract.csproj
@@ -29,12 +29,12 @@
 
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.16.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.34.4" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.0.0-beta01" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Abstract</PackageId>
-    <Version>1.0.3-beta02</Version>
+    <Version>1.0.4-beta01</Version>
     <Description>Workflow engine contracts</Description>
     <Copyright>Copyright ©2023 Xlent Link AB</Copyright>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -43,7 +43,7 @@
     <PackageLanguage>en-US</PackageLanguage>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      1.0.3 First release
+      1.0.4 First release
     </PackageReleaseNotes>
   </PropertyGroup>
 
