--- a/src/WorkflowEngine.Sdk.Persistence.Memory/WorkflowEngine.Sdk.Persistence.Memory.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Memory/WorkflowEngine.Sdk.Persistence.Memory.csproj
@@ -21,7 +21,7 @@
   <!-- Publish symbols -->
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.34.4" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.0.0-beta01" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WorkflowEngine.Sdk.Persistence.Abstract\WorkflowEngine.Sdk.Persistence.Abstract.csproj" />
@@ -29,7 +29,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Persistence.Memory</PackageId>
-    <Version>2.2.0-beta02</Version>
+    <Version>2.2.1-beta01</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -39,7 +39,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      2.2.0 Added support for fallback strategy of saving workflow state
+      2.2.1 Added support for fallback strategy of saving workflow state
       2.1.14 Bump
       2.1.7 Updated nugets to avoid versions with security risks
       2.1.6 Bump
