--- a/src/WorkflowEngine.Sdk.Abstract/WorkflowEngine.Sdk.Abstract.csproj
+++ b/src/WorkflowEngine.Sdk.Abstract/WorkflowEngine.Sdk.Abstract.csproj
@@ -34,7 +34,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Abstract</PackageId>
-    <Version>1.3.0</Version>
+    <Version>1.4.0</Version>
     <Description>Workflow engine contracts</Description>
     <Copyright>Copyright ©2023 Xlent Link AB</Copyright>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -43,6 +43,7 @@
     <PackageLanguage>en-US</PackageLanguage>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.4.0 Added IActionActivity.TrySynchronousHttpRequestFirst()
       1.3.0 Added ActivityInstance.Iteration
       1.2.0 Added overload for creating activities
       1.1.0 Added IActivityBase.ActivityFinishedAt
