--- a/src/Misc.AspNet.Sdk/Misc.AspNet.Sdk.csproj
+++ b/src/Misc.AspNet.Sdk/Misc.AspNet.Sdk.csproj
@@ -32,15 +32,15 @@
   <!-- Publish symbols -->
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="4.1.1" />
-    <PackageReference Include="Nexus.Link.Contracts.Misc.AspNet.Sdk" Version="1.0.12" />
+    <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="4.2.1" />
+    <PackageReference Include="Nexus.Link.Contracts.Misc.AspNet.Sdk" Version="1.0.13" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.29.6" />
     <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.4.9" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Misc.AspNet.Sdk</PackageId>
-    <Version>1.3.7</Version>
+    <Version>1.3.9</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -50,7 +50,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      1.3.7 Bump
+      1.3.9 Bump
       1.3.2 Added ReportHttpClientExceptions to NexusLinkMiddleware
       1.2.4 Bump
       1.2.0 Can detect other instances of AM mock
@@ -59,5 +59,12 @@
       1.0.4 Bump
       1.0.0 First release
     </PackageReleaseNotes>
+  </PropertyGroup>
+
+  <!-- Automatic generation of local alpha packages -->
+  <PropertyGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch('$(Version)', '(-alpha|-alfa)')) ">
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <LocalPackageOutputPath Condition="'$(LocalPackageOutputPath)'==''">c:\dev\local-nugets</LocalPackageOutputPath>
+    <PackageOutputPath>$(LocalPackageOutputPath)</PackageOutputPath>
   </PropertyGroup>
 </Project>
