--- a/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
@@ -24,9 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.DatabasePatcher" Version="2.7.0" />
+    <PackageReference Include="Nexus.Link.DatabasePatcher" Version="2.8.0" />
     <PackageReference Include="Nexus.Link.Libraries.Azure" Version="3.9.5" />
-    <PackageReference Include="Nexus.Link.Libraries.SqlServer" Version="3.1.5" />
+    <PackageReference Include="Nexus.Link.Libraries.SqlServer" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -48,7 +48,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Persistence.Sql</PackageId>
-    <Version>2.10.1</Version>
+    <Version>2.10.2</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -58,6 +58,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      2.10.2 Bump
       2.10.1 Corrected name of Hash table to HashRecord
       2.10.0 Added ActivityInstanceRecord.Iteration
       2.9.2 Bump
