--- a/src/AsyncManager.Sdk/AsyncManager.Sdk.csproj
+++ b/src/AsyncManager.Sdk/AsyncManager.Sdk.csproj
@@ -37,7 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="4.2.1" />
+    <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="4.3.0" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.29.6" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.18.0" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.0.2" />
@@ -45,7 +45,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.AsyncManager.Sdk</PackageId>
-    <Version>4.1.0</Version>
+    <Version>4.2.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -55,6 +55,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      4.2.0 Added ReadWaitingResponsesAsync
       4.1.0 Now use Metadata.WaitingRequestId
       4.0.8 Bump
       4.0.0 Replaced IRequestService.RetryRequestWithNewAuthenticationAsync with CreateRequestCopyWithNewAuthenticationAsync
