--- a/src/Authentication.Sdk/Authentication.Sdk.csproj
+++ b/src/Authentication.Sdk/Authentication.Sdk.csproj
@@ -32,7 +32,7 @@
 
   <PropertyGroup>
 	  <PackageId>Nexus.Link.Authentication.Sdk</PackageId>
-	  <Version>3.7.0-beta03</Version>
+	  <Version>3.7.0</Version>
 	  <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 	  <PackageTags>nexus;link;fulcrum;lever</PackageTags>
 	  <Authors>XLENT Link</Authors>
@@ -42,7 +42,7 @@
 	  <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
 	  <IncludeSymbols>true</IncludeSymbols>
 	  <PackageReleaseNotes>
-      3.7.0 Experimenting with versions of IdentityModel
+      3.7.0 Upgraded IdentityModel
       3.6.7 Bump
       3.6.2 Detect http client exception when fetching public key and setup on FulcrumApplication.Setup.HealthTracker. Converts the exception to FulcrumResourceException.
 		  3.5.0 Dropped support for net461
