--- a/src/Misc.AspNet.Sdk/Misc.AspNet.Sdk.csproj
+++ b/src/Misc.AspNet.Sdk/Misc.AspNet.Sdk.csproj
@@ -35,12 +35,12 @@
     <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="4.3.0" />
     <PackageReference Include="Nexus.Link.Contracts.Misc.AspNet.Sdk" Version="1.0.13" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.30.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.5.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.5.2" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Misc.AspNet.Sdk</PackageId>
-    <Version>1.4.0</Version>
+    <Version>1.4.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -50,7 +50,8 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-		1.4.0 Use FulcrumApplication.Context.RequestStopwatch
+      1.4.1 Bump
+      1.4.0 Use FulcrumApplication.Context.RequestStopwatch
 		1.3.10 Bump
 		1.3.2 Added ReportHttpClientExceptions to NexusLinkMiddleware
 		1.2.4 Bump
